[package]
name = "codep"
version = "0.6.8"
edition = "2024"
license = "MIT"
description = "CLI for getting a list of recently used VSCode files and workspaces."
repository = "https://github.com/Relacibo/code-pick-rs"
readme = "README.md"
keywords = ["VSCode", "rofi", "cli", "tool"]
categories = ["development-tools"]

[dependencies]
sonic-rs = "0.5.1"
dirs = "6.0.0"
clap = { version = "4.5.38", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
urlencoding = "2.1.3"
anyhow = "1.0.98"
